--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/wifaqmn/PowerBI-Project">Power BI Projects</a></h2>
+										<h2><a href="https://github.com/wifaqmn/Plant-Sales-Project">Plant Sales Project</a></h2>
 									</header>
-									<a href="https://github.com/wifaqmn/PowerBI-Project" class="image fit"><img src="images/PowerBI2.png" alt="" /></a>
-									<p>In this project, we take cleaned data from Excel/SQL server and visualize it in Power BI.</p>
+									<a href="https://github.com/wifaqmn/Plant-Sales-Project" class="image fit"><img src="images/plant.jpg" alt="" /></a>
+									<p>In this project, we take plant sales data from Excel and visualize it in Power BI.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/wifaqmn/PowerBI-Project" class="button">View Project</a></li>
+										<li><a href="https://github.com/wifaqmn/Plant-Sales-Project" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
