--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1> Wifaq's Portfolio</h1>
-						<p> Portfolio Project well versed in Excel, Power BI & SQL.</p>
+						<p> Portfolio Project well versed in Excel, Power BI, Tableau & SQL.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -78,9 +78,7 @@
 									<ul class="actions special">
 										<li><a href="https://github.com/wifaqmn/Plant-Sales-Project" class="button">View Project</a></li>
 									</ul>
-								</article>
-							</section>
-							<section class="posts">
+								</article>											
 								<article>
 									<header>
 										<h2><a href="https://github.com/wifaqmn/Excel-Project">Excel Projects</a><h2>
@@ -91,17 +89,27 @@
 										<li><a href="https://github.com/wifaqmn/Excel-Project" class="button">View Project</a></li>
 									</ul>
 								</article>
-							<article>
-								<header>
-									<h2><a href="https://github.com/wifaqmn/PowerBI-Project">Power BI Projects</a></h2>
-								</header>
-								<a href="https://github.com/wifaqmn/PowerBI-Project" class="image fit"><img src="images/PowerBI2.png" alt="" /></a>
-								<p>In this project, we take cleaned data from Excel/SQL server and visualize it in Power BI.</p>
-								<ul class="actions special">
-									<li><a href="https://github.com/wifaqmn/PowerBI-Project" class="button">View Project</a></li>
+								<article>
+									<header>
+										<h2><a href="https://github.com/wifaqmn/PowerBI-Project">Power BI Projects</a></h2>
+									</header>
+									<a href="https://github.com/wifaqmn/PowerBI-Project" class="image fit"><img src="images/PowerBI2.png" alt="" /></a>
+									<p>In this project, we take cleaned data from Excel/SQL server and visualize it in Power BI.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/wifaqmn/PowerBI-Project" class="button">View Project</a></li>
 								</ul>
-							</article>
-						</section>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes">Tableau Dashboard</a></h2>
+									</header>
+									<a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes" class="image fit"><img src="images/tableau.webp" alt="" /></a>
+									<p>In this project, we take cleaned data from Excel/SQL server and visualize it in Tableau.</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes" class="button">View Project</a></li>
+								</ul>
+								</article>
+							</section>
 
 
 					</div>
