--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Welcome to my Portfolio Project </a>
+						<a href="index.html" class="logo">Welcome to my Portfolio</a>
 					</header>
 
 				<!-- Nav -->
