--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</header>
 								<a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" class="image main"><img src="images/supermarket.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" class="button large">View Project</a></li>
+									<li><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
