--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/wifaq-md-nor-66597017a/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/wifaqmn" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/wifaq-md-nor-66597017a/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/wifaqmn" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -48,10 +48,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0">Data Cleaning in SQL</h2>
+									<h2><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank">Data Cleaning in SQL</h2>
 									<p>In this project, we take raw sales data and transform it in SQL Server to make it more usable for analysis.</p>
 								</header>
-								<a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" class="image main"><img src="images/supermarket.jpg" alt="" /></a>
+								<a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank" class="image main"><img src="images/supermarket.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank" class="button large">View Project</a></li>
 								</ul>
@@ -61,52 +61,52 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/wifaqmn/Student-Performance-Excel-Project">Student Performance Project</a><h2>
+										<h2><a href="https://github.com/wifaqmn/Student-Performance-Excel-Project" target="_blank">Student Performance Project</a><h2>
 									</header>
-									<a href="https://github.com/wifaqmn/Student-Performance-Excel-Project" class="image fit"><img src="images/classroom.webp" alt="" /></a>
+									<a href="https://github.com/wifaqmn/Student-Performance-Excel-Project" target="_blank" class="image fit"><img src="images/classroom.webp" alt="" /></a>
 									<p>In this project, we take raw student data and transform it by data cleaning and then visualize it in Excel.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/wifaqmn/Student-Performance-Excel-Project" class="button">View Project</a></li>
+										<li><a href="https://github.com/wifaqmn/Student-Performance-Excel-Project" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/wifaqmn/Plant-Sales-Project">Plant Sales Project</a></h2>
+										<h2><a href="https://github.com/wifaqmn/Plant-Sales-Project" target="_blank">Plant Sales Project</a></h2>
 									</header>
-									<a href="https://github.com/wifaqmn/Plant-Sales-Project" class="image fit"><img src="images/plant.jpg" alt="" /></a>
+									<a href="https://github.com/wifaqmn/Plant-Sales-Project" target="_blank" class="image fit"><img src="images/plant.jpg" alt="" /></a>
 									<p>In this project, we take plant sales data from Excel and visualize it in Power BI.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/wifaqmn/Plant-Sales-Project" class="button">View Project</a></li>
+										<li><a href="https://github.com/wifaqmn/Plant-Sales-Project" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>											
 								<article>
 									<header>
-										<h2><a href="https://github.com/wifaqmn/Excel-Project">Excel Projects</a><h2>
+										<h2><a href="https://github.com/wifaqmn/Excel-Project" target="_blank">Excel Projects</a><h2>
 									</header>
-									<a href="https://github.com/wifaqmn/Excel-Project" class="image fit"><img src="images/excel3.jpg" alt="" /></a>
+									<a href="https://github.com/wifaqmn/Excel-Project" target="_blank" class="image fit"><img src="images/excel3.jpg" alt="" /></a>
 									<p>In this project, we take raw data from various sources and transform it by cleaning the data and then visualize it in Excel.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/wifaqmn/Excel-Project" class="button">View Project</a></li>
+										<li><a href="https://github.com/wifaqmn/Excel-Project" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/wifaqmn/PowerBI-Project">Power BI Projects</a></h2>
+										<h2><a href="https://github.com/wifaqmn/PowerBI-Project" target="_blank">Power BI Projects</a></h2>
 									</header>
-									<a href="https://github.com/wifaqmn/PowerBI-Project" class="image fit"><img src="images/PowerBI2.png" alt="" /></a>
+									<a href="https://github.com/wifaqmn/PowerBI-Project" target="_blank" class="image fit"><img src="images/PowerBI2.png" alt="" /></a>
 									<p>In this project, we take cleaned data from Excel/SQL server and visualize it in Power BI.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/wifaqmn/PowerBI-Project" class="button">View Project</a></li>
+										<li><a href="https://github.com/wifaqmn/PowerBI-Project" target="_blank" class="button">View Project</a></li>
 								</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes">Tableau Dashboard</a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes" target="_blank">Tableau Dashboard</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes" class="image fit"><img src="images/tableau.webp" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes" target="_blank" class="image fit"><img src="images/tableau.webp" alt="" /></a>
 									<p>In this project, we take cleaned data from Excel/SQL server and visualize it in Tableau.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/wifaq.md.nor/vizzes" target="_blank" class="button">View Project</a></li>
 								</ul>
 								</article>
 							</section>
@@ -132,8 +132,8 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/wifaq-md-nor-66597017a/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/wifaqmn" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/wifaq-md-nor-66597017a/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/wifaqmn" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
