add new project and make some changes

--- a/index.html
+++ b/index.html
@@ -48,17 +48,27 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank">Data Cleaning in SQL</h2>
-									<p>In this project, we take raw sales data and transform it in SQL Server to make it more usable for analysis.</p>
+									<h2><a href="https://github.com/wifaqmn/cyclistic-case-study/blob/main/README.md" target="_blank">Cyclistic: Bike Sharing Case Study</h2>
+									<p>In this case study, I will perform real-world tasks as junior data analyst for a fictional bike sharing company called Cyclistic.</p>
 								</header>
-								<a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank" class="image main"><img src="images/supermarket.jpg" alt="" /></a>
+								<a href="https://github.com/wifaqmn/cyclistic-case-study/blob/main/README.md" target="_blank" class="image main"><img src="images/bike_rental4.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank" class="button large">View Project</a></li>
+									<li><a href="https://github.com/wifaqmn/cyclistic-case-study/blob/main/README.md" target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article class="post featured">
+									<header class="major">
+										<h2><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank">Data Cleaning in SQL</h2>
+									</header>
+									<a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank" class="image main"><img src="images/supermarket.jpg" alt="" /></a>
+									<p>In this project, we take raw sales data and transform it in SQL Server to make it more usable for analysis.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/wifaqmn/Spearsland-Sales-Project/blob/main/Spearsland_Sales_Project_SQL.sql#L47C0" target="_blank" class="button large">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://github.com/wifaqmn/Student-Performance-Excel-Project" target="_blank">Student Performance Project</a><h2>
